--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "thaihoa311 <thaihoa311@gmail.com>",
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^2.1.18",
@@ -28,8 +28,10 @@
     "polished": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-animated-css": "^1.0.4",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
+    "react-slick": "^0.23.2",
     "react-sticky": "^6.0.3",
     "react-typography": "^0.16.18",
     "styled-components": "^4.1.3",
