--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "endOfLine": "lf",
-  "semi": true,
-  "singleQuote": false,
-  "tabWidth": 2,
-  "trailingComma": "es5"
+  "printWidth": 100,
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "jsxBracketSameLine": false
 }
