--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "version": "0.1.0",
   "author": "thaihoa311 <thaihoa311@gmail.com>",
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "classnames": "^2.2.6",
     "gatsby": "^2.1.18",
     "gatsby-image": "^2.0.30",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-antd": "^2.0.2",
+    "gatsby-plugin-eslint": "^2.0.4",
     "gatsby-plugin-less": "^2.0.11",
     "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-offline": "^2.0.24",
@@ -34,14 +36,29 @@
     "react-slick": "^0.23.2",
     "react-sticky": "^6.0.3",
     "react-typography": "^0.16.18",
+    "shortid": "^2.2.14",
     "styled-components": "^4.1.3",
+    "stylelint-processor-styled-components": "^1.5.2",
     "typography": "^0.16.18",
     "typography-theme-bootstrap": "^0.16.18",
     "typography-theme-de-young": "^0.16.18",
     "typography-theme-stow-lake": "^0.16.18"
   },
   "devDependencies": {
-    "prettier": "^1.16.4"
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-register": "^6.26.0",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.4",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1"
   },
   "keywords": [
     "gatsby"
