--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,5 +3,8 @@
   "extends": [
     "stylelint-config-recommended",
     "stylelint-config-styled-components"
-  ]
+  ],
+  "rules": {
+    "block-no-empty": null
+  }
 }
