--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-sharp": "^2.1.14",
-    "grommet": "^2.5.0",
     "grommet-icons": "^4.2.0",
     "grommet-styles": "^0.2.0",
     "less": "^3.9.0",
+    "lodash.throttle": "^4.1.1",
     "node-sass": "^4.11.0",
     "polished": "^3.0.0",
     "prop-types": "^15.7.2",
@@ -36,6 +36,7 @@
     "react-slick": "^0.23.2",
     "react-sticky": "^6.0.3",
     "react-typography": "^0.16.18",
+    "reactstrap": "^7.1.0",
     "shortid": "^2.2.14",
     "styled-components": "^4.1.3",
     "stylelint-processor-styled-components": "^1.5.2",
