--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-sharp": "^2.1.14",
+    "google-map-react": "^1.1.4",
     "grommet-icons": "^4.2.0",
     "grommet-styles": "^0.2.0",
     "less": "^3.9.0",
     "lodash.throttle": "^4.1.1",
+    "node-mandrill": "^1.0.1",
     "node-sass": "^4.11.0",
     "polished": "^3.0.0",
     "prop-types": "^15.7.2",
